--- a/Ejemplo 1.Rmd
+++ b/Ejemplo 1.Rmd
@@ -335,7 +335,7 @@ Column {data-widt=500}
 ---
 
 ```{r include=FALSE}
-#library(margins)
+library(margins)
 
 margins(rlog2)
 ```
@@ -380,53 +380,44 @@ Con respecto a la variable del nivel de riqueza del hogar al que pertenece la mu
 
 
 
+# Factorización
 
+
+Column {data-widt=500}
+---
+
+### Análisis de Correspondencias Múltiples: individuos
 
 ```{r}
-install.packages("FactoMineR")
-install.packages("factoextra")
 library(FactoMineR)
 library(factoextra)
 
-# Supongamos que ya tienes cargado tu dataframe 'data'
-# Seleccionar las columnas "V025", "V149", "V190" y "lengua"
 subset_data <- data[, c("V025", "V149", "V190", "lengua")]
 
-# Realizar el Análisis de Correspondencias Múltiples
 resultado_mca <- MCA(subset_data, graph = FALSE)
 
-
-# Resumen de los resultados
-summary(resultado_mca)
-
-# Visualizar el mapa de individuos
 fviz_mca_ind(resultado_mca, 
-             label = "none", # No mostrar etiquetas de individuos
-             habillage = "lengua", # Variable para colorear los individuos
+             label = "none",
+             habillage = "lengua", 
              addEllipses = TRUE, ellipse.level = 0.95)
-
-# Visualizar el mapa de variables
-fviz_mca_var(resultado_mca, 
-             repel = TRUE) # Evitar la superposición de etiquetas
-
 ```
 
+
+Column {data-widt=500}
+---
+### Análisis de Correspondencias Múltiples: Variables con contribuciones
+
 ```{r}
-# Obtener la contribución de las variables a las dimensiones
 var <- get_mca_var(resultado_mca)
 
-# Visualizar la contribución de las variables a la Dimensión 1
-fviz_contrib(resultado_mca, choice = "var", axes = 1)
-
-# Visualizar la contribución de las variables a la Dimensión 2
-fviz_contrib(resultado_mca, choice = "var", axes = 2)
-
-# Visualizar el mapa de variables con contribuciones
 fviz_mca_var(resultado_mca, col.var = "contrib", 
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"), 
              repel = TRUE)
-
 ```
+
+
+
+
 
 
 
